--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "App\\":"./"
+            "App\\":"src/"
         }
     },
-    "require": {
-        "twbs/bootstrap": "^4.5"
-    }
+    "require": {}
 }
