--- a/apache.conf
+++ b/apache.conf
@@ -1,6 +1,14 @@
 <VirtualHost *:80>
     ServerName creperie.web
     ServerAlias www.creperie.web
-    DocumentRoot "C:\projets\crepe\creperie-website\Public"
-    DirectoryIndex "C:\projets\crepe\creperie-website\Public/index.php"
+    DocumentRoot "C:\projets\crepe\creperie-website/Public"
+    DirectoryIndex index.php
+    <Directory "C:\projets\crepe\creperie-website/Public">
+        Options Indexes FollowSymLinks
+        Require all granted
+        AllowOverride All
+        RewriteEngine on
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule . index.php [L]
+    </Directory>
 </VirtualHost>
